# python-file-storage-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
fs_store/: cli.py  config.py  custom_exception.py  main.py
tests/: test_cli.py  test_http.py
