[tool.poetry]
name = "fs-store"
version = "0.1.0"
description = ""
authors = ["KaoriNakajima <miko2823kao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
setuptools = "^74.1.0"
python-multipart = "^0.0.9"
requests = "^2.32.3"
pydantic = "^2.8.2"

[tool.poetry.scripts]
fs-store = "fs_store.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
